# file-suggest

./: Cargo.toml  LICENSE  README.md
.claude/agent-memory/superpowers-bd-epic-verifier/: MEMORY.md  project_file_suggest_v2.md  project_file_suggest_v21.md
docs/plans/: 2026-03-15-file-suggest-v2.md
src/: db.rs  fuzzy.rs  git.rs  incremental.rs  index.rs  lib.rs  main.rs  project.rs  scoring.rs  search.rs
temp/: commit-msg-20260315-092030.md  commit-msg-20260316-001.md  commit-msg.md  commit-msg.txt  count-queries.py  file-suggest-v2-epic.md  hub-0w0-task-1.md  hub-0w0-task-10.md  hub-0w0-task-11.md  hub-0w0-task-12.md  hub-0w0-task-13.md  hub-0w0-task-2.md  hub-0w0-task-3.md  hub-0w0-task-4.md  hub-0w0-task-5.md  hub-0w0-task-6.md  hub-0w0-task-7.md  hub-0w0-task-8.md  hub-0w0-task-9.md  hub-0w0-verification.md  hub-5b3.1-code-1.md  hub-5b3.1-impl.md  hub-5b3.1-spec.md  hub-5b3.2-code-1.md  hub-5b3.2-code-2.md  hub-5b3.2-code-3.md  hub-5b3.2-impl.md  hub-5b3.2-spec.md  hub-5b3.3-code-1.md  hub-5b3.3-impl.md  hub-5b3.4-code-1.md  hub-5b3.4-impl.md  hub-5b3.4-spec.md  hub-5b3.5-impl.md  hub-5ym.1-code-1.md  hub-5ym.1-code-2.md  hub-5ym.1-code-3.md  hub-5ym.1-impl.md  hub-5ym.2-code-1.md  hub-5ym.2-code-2.md  (+6 more)
tests/: index_test.rs  project_test.rs  scoring_test.rs  search_test.rs
