[package]
name = "file-suggest"
version = "0.2.0"
edition = "2024"
description = "Fast file suggestion for Claude Code with FTS5 + frecency ranking"
license = "MIT"

[dependencies]
rusqlite = { version = "0.35", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fuzzy-matcher = "0.3"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
strip = true
